--- a/trellis/group_vars/all/main.yml
+++ b/trellis/group_vars/all/main.yml
@@ -7,7 +7,8 @@ php_version: "8.0"
 ntp_timezone: Etc/UTC
 ntp_manage_config: true
 www_root: /srv/www
-max_journal_size: 512M
+max_journal_size: 512Ml
+letsencrypt_contact_emails: nick5.webmaster@gmail.com
 
 # Values of raw_vars will be wrapped in `{% raw %}` to avoid templating problems if values include `{%` and `{{`.
 # Will recurse dicts/lists. `*` is wildcard for one or more dict keys, list indices, or strings. Example:
