--- a/trellis/group_vars/all/main.yml
+++ b/trellis/group_vars/all/main.yml
@@ -8,12 +8,13 @@ ntp_timezone: Etc/UTC
 ntp_manage_config: true
 www_root: /srv/www
 max_journal_size: 512Ml
-letsencrypt_contact_emails: nick5.webmaster@gmail.com
 
 # Values of raw_vars will be wrapped in `{% raw %}` to avoid templating problems if values include `{%` and `{{`.
 # Will recurse dicts/lists. `*` is wildcard for one or more dict keys, list indices, or strings. Example:
 #   - vault_wordpress_sites.*.*_salt    -- matches vault_wordpress_sites.example.com.env.secure_auth_salt etc.
 # Will not function for var names or topmost dict keys that contain a period ('.').
+letsencrypt_contact_emails:
+  - nick5.webmaster@gmail.com
 raw_vars:
   - vault_mail_password
   - vault_mysql_root_password
