--- a/site/composer.json
+++ b/site/composer.json
@@ -40,7 +40,9 @@
     "roots/wordpress": "6.1.1",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.1.0",
-    "wpackagist-theme/twentytwentythree": "^1.0"
+    "wpackagist-theme/twentytwentythree": "^1.0",
+    "wpackagist-plugin/custom-permalinks": "^2.5",
+    "wpackagist-plugin/redirection": "^5.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
